--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
   <h1><p style="color: yellow"> ĐÂY LÀ MỘT SỐ THÔNG TIN CÁ NHÂN CỦA TÔI : </p></h1>
   
-<a href="facebook.com/admin.hentaiz.vn">
+<a href="https://facebook.com/admin.hentaiz.vn">
   <img src="https://i.imgur.com/h3pi5Gz.png" alt="Description of the image"width="150" height="150">
 </a>
 
